--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,6 +1,8 @@
 FROM maven:3.5-jdk-8-alpine as build
 COPY calculator/src /home/app/src
 COPY calculator/pom.xml /home/app
+WORKDIR /home/app
+
 RUN mvn -f home/app/pom.xml clean install
 
 FROM openjdk:8-jre-alpine
