Add deployment instructions in jenkinsfile

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -3,7 +3,7 @@ COPY calculator/src /home/app/src
 COPY calculator/pom.xml /home/app
 WORKDIR /home/app
 
-RUN mvn -f home/app/pom.xml clean install
+RUN mvn -f /home/app/pom.xml clean install
 
 FROM openjdk:8-jre-alpine
 COPY --from=build /home/app/target/calculator-1.0-SNAPSHOT.jar /home/app/calculator.jar
