--- a/Dockerfile.managed
+++ b/Dockerfile.managed
@@ -26,4 +26,5 @@ RUN sudo dpkg -i filebeat-7.11.1-amd64.deb
 COPY filebeat.yml /usr/share/filebeat/filebeat.yml
 RUN sudo service filebeat start
 
-CMD ["sudo /usr/sbin/sshd -D", "sudo service docker start", "sudo service filebeat start"]
+ADD services.sh /usr/share/services.sh
+CMD ["bin/bash", "/usr/share/services.sh"]
