update ansible config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,8 +3,7 @@
 172.17.0.3 ansible_user=green
 [defaults]
 inventory=./inventory
-remote_user=root
-ask_pass=true
+remote_user=green
 ansible_connection=ssh
 ansible_user=green
 ansible_ssh_pass=green
