--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,9 +2,10 @@
 172.17.0.2 ansible_user=green
 172.17.0.3 ansible_user=green
 [defaults]
-inventory=./inventory
 remote_user=green
 ansible_connection=ssh
 ansible_user=green
 ansible_ssh_pass=green
-
+ansible_sudo_pass=green
+become_method=sudo
+become_ask_pass=false
